--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-*body {
-  width: 1280px;
-  height: 3280px;  
-  margin: 0px;
-  padding: 0px;  
-}
-
 body {
   background-image: url(assets/bg-image.jpg);
   background-size: cover;
@@ -15,7 +8,7 @@ body {
   margin: 0px auto;
   padding: 88px 80px 137px;
   width: 1120px;
-  background-color: #dce0e6;
+  background-color: white;
   border-radius: 28px;
 }
 
